--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json,md}\"",
     "stylelint": "stylelint \"src/**/*.{css,scss}\"",
-    "check": "npm run lint:fix && npm run stylelint && npm run format",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "browserslist": {
     "production": [
