--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     ".eslintrc.js"
   ],
   "compilerOptions": {
+    "jsx": "react",
     "sourceMap": false,
     "types": ["node"],
     "esModuleInterop": true,
