--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
   "compilerOptions": {
     "sourceMap": false,
     "types": ["node"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
