feat(TTS-37): add alias and change import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,15 @@
     "sourceMap": false,
     "types": ["node"],
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+
+    "baseUrl": "src",
+    "paths": {
+      "@assets/*": ["assets/*"],
+      "@constants/*": ["constants/*"],
+      "@hooks/*": ["hooks/*"],
+      "@styles/*": ["styles/*"],
+      "@types/*": ["types/*"]
+    }
   }
 }
