--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,3 @@
-
 {
   "arrowParens": "avoid",
   "singleQuote": true,
@@ -8,5 +7,6 @@
   "printWidth": 80,
   "semi": true,
   "bracketSpacing": true,
-  "bracketSameLine": false
+  "bracketSameLine": false,
+  "endOfLine": "lf"
 }
