--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.2.2",
     "@reduxjs/toolkit": "^2.7.0",
@@ -12,7 +13,6 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "^5.0.1",
-    "sass": "^1.86.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -38,8 +38,9 @@
     "stylelint-scss": "^6.11.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
