--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "@constants/*": ["constants/*"],
       "@hooks/*": ["hooks/*"],
       "@styles/*": ["styles/*"],
-      "@types/*": ["types/*"]
+      "@types/*": ["types/*"],
     }
   }
 }
