--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
+    "sass": "^1.87.0",
     "stylelint": "^16.18.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-scss": "^6.11.1"
