--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "^5.0.1",
+    "sass": "^1.86.3",
+    "swiper": "^11.2.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
