--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.2.2",
     "@reduxjs/toolkit": "^2.7.0",
     "classnames": "^2.5.1",
+    "radix-ui": "^1.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
