--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@reduxjs/toolkit": "^2.7.0",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.9.4",
     "radix-ui": "^1.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
