add theme switcher and fix problem with checkout button

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     ".eslintrc.js"
   ],
   "compilerOptions": {
-    "jsx": "react",
+    "jsx": "react-jsx",
     "sourceMap": false,
     "types": ["node"],
     "esModuleInterop": true,
