--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "radix-ui": "^1.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "^5.0.1",
@@ -25,6 +26,7 @@
     "@mate-academy/eslint-config-react-typescript": "^1.0.20",
     "@mate-academy/students-ts-config": "^0.0.4",
     "@mate-academy/stylelint-config": "^0.0.15",
+    "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
